--- a/prison-consulting.html
+++ b/prison-consulting.html
@@ -44,6 +44,14 @@
 <div class="container">
   <h2>Prison Consulting &amp; Reentry Support</h2>
 
+
+<p>
+  Structured support for individuals and families navigating incarceration, release preparation, and reentry planning.
+  We provide non-legal assistance focused on organization, documentation, and practical next steps.
+</p>
+
+<hr class="divider" />
+
   <p>
     Marietta Research Solutions provides practical, one-to-one support for individuals and families navigating
     incarceration-related administration and reentry planning. We focus on organization, readiness, and
