--- a/sbir.html
+++ b/sbir.html
@@ -44,6 +44,13 @@
 <div class="container">
   <h2>SBIR Grant Writing Support</h2>
 
+<p>
+  Structured support for SBIR/STTR proposal development, including technical writing, organization, and compliance checks.
+  We help small businesses present a clear, credible plan with strong technical justification and deliverables.
+</p>
+
+<hr class="divider" />
+
   <p>
     Marietta Research Solutions supports small businesses pursuing SBIR/STTR opportunities by helping you
     turn your technical concept into a clear, competitive proposal. We focus on structure, clarity, and
