--- a/notary.html
+++ b/notary.html
@@ -43,6 +43,13 @@
 
 <div class="container">
   <h2>Notary Public Services</h2>
+  
+  <p>
+  Professional notary services by appointment in Marietta, Georgia.
+  We provide reliable notarizations for common documents with clear scheduling and a respectful client experience.
+</p>
+
+<hr class="divider" />
 
   <p>
     Marietta Research Solutions offers professional, by-appointment notary services in Marietta, Georgia.
