--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Marietta Research Solutions</title>
 
+<link rel="preload" as="image" href="images/hero-bg.jpg" />
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
 
