--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Marietta Research Solutions</title>
 
 <link rel="preload" as="image" href="images/hero-bg.jpg" />
+<link rel="preload" as="image" href="images/icons/engineering.svg" />
+<link rel="preload" as="image" href="images/icons/paralegal.svg" />
+<link rel="preload" as="image" href="images/icons/patent.svg" />
+<link rel="preload" as="image" href="images/icons/ai.svg" />
+<link rel="preload" as="image" href="images/icons/prison.svg" />
+<link rel="preload" as="image" href="images/icons/sbir.svg" />
+<link rel="preload" as="image" href="images/icons/notary.svg" />
+
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
 
