--- a/ai.html
+++ b/ai.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI for Small Businesses & Law Firms | Marietta Research Solutions</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v20260116" />
 <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
