--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Contact / Consult | Marietta Research Solutions</title>
 
 <link rel="preconnect" href="https://formspree.io">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?20260116" />
 <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
