--- a/engineering.html
+++ b/engineering.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Electrical Engineering Consulting | Marietta Research Solutions</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=20260116" />
 <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
