--- a/about.html
+++ b/about.html
@@ -15,6 +15,14 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="About Marietta Research Solutions: personalized professional solutions for small businesses, law firms, inventors, and individuals." />
+  
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
 </head>
 
 <body>
