--- a/faq.html
+++ b/faq.html
@@ -14,6 +14,16 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
+  
+  <!-- Google tag (gtag.js) -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
+
 </head>
 
 <body>
