--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,16 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
+  
+  <!-- Google tag (gtag.js) -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
+
 </head>
 
 <body>
