--- a/sbir.html
+++ b/sbir.html
@@ -25,6 +25,16 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
+  
+  <!-- Google tag (gtag.js) -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
+
 </head>
 
 <body>
