--- a/services.html
+++ b/services.html
@@ -15,6 +15,16 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Explore services offered by Marietta Research Solutions including engineering consulting, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  
+  <!-- Google tag (gtag.js) -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
+
 </head>
 
 <body>
