--- a/404.html
+++ b/404.html
@@ -14,6 +14,16 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="robots" content="noindex" />
+
+<!-- Google tag (gtag.js) -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TFKE4XNDT7');
+</script>
+
 </head>
 
 <body>
