--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
   <div class="cta-row">
     <a class="btn" href="services.html">View Services</a>
-    <a class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
-      Capabilities (PDF)
+    <a id="capabilitiesLink" class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
+       Capabilities (PDF)
     </a>
     <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
   </div>
