--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
-    <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a><br />
   </p>
 </footer>
@@ -209,5 +209,7 @@
   });
 </script>
 
+
+<script src="site.js"></script>
 </body>
 </html>
