--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
-    <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
@@ -236,5 +236,6 @@
   });
 </script>
 
+<script src="site.js"></script>
 </body>
 </html>
