--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
   <title>FAQ | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css?v=20260116" />
-<link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
@@ -132,7 +132,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
-        <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
@@ -153,5 +153,6 @@
   });
 </script>
 
+<script src="site.js"></script>
 </body>
 </html>
