--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>Page Not Found | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css" />
-<link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
@@ -67,9 +67,11 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
+    <a class="capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
 
+<script src="site.js"></script>
 </body>
 </html>
