--- a/services.html
+++ b/services.html
@@ -125,7 +125,7 @@
    <!-- Buttons moved here: bottom above Important Notes -->
   <div class="cta-row">
     <a class="btn" href="contact.html">Contact / Consult</a>
-    <a class="capabilities-link" class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
+    <a class="btn btn-outline capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">
       Capabilities (PDF)
     </a>
   </div>
