--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <div class="cta-row">
     <a class="btn" href="services.html">View Services</a>
-    <a class="capabilities-link" class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
+    <a class="btn btn-outline capabilities-link" href="capabilities.pdf" target="_blank" rel="noopener">
        Capabilities (PDF)
     </a>
     <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
