--- a/contact.html
+++ b/contact.html
@@ -144,8 +144,7 @@
           </label>
         </div>
 
-        <button id="submitBtn" type="submit">Send</button>
-
+        <button id="contactSubmitBtn" type="submit">Send</button>
       </form>
 
       <p class="fineprint">
