--- a/contact.html
+++ b/contact.html
@@ -145,6 +145,12 @@
         </div>
 
         <button id="contactSubmitBtn" type="submit">Send</button>
+        
+        <button id="contactSubmitBtn" type="submit">
+          <span class="btn-text">Send</span>
+          <span class="btn-spinner" aria-hidden="true"></span>
+        </button>
+
       </form>
 
       <p class="fineprint">
