--- a/contact.html
+++ b/contact.html
@@ -62,9 +62,9 @@
 
       <p>
         <strong>Phone:</strong>
-        <a href="tel:17702860254">770-286-0254</a><br />
+        <a class="track-phone-jim" href="tel:17702860254">770-286-0254</a><br />
         <strong>Email:</strong>
-        <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+        <a class="track-email-jim" href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
       </p>
 
       <p><strong>Business Address:</strong><br />
