--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css?v=20260116">
-<link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -147,13 +147,13 @@
 
       <p>
         <strong>Email:</strong><br />
-        <a href="mailto:susan@mariettaresearchsolutions.com">susan@mariettaresearchsolutions.com</a><br />
-        <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+        <a class="track-email-susan" href="mailto:susan@mariettaresearchsolutions.com">susan@mariettaresearchsolutions.com</a><br />
+        <a class="track-email-jim" href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
        </p>
 
         <p>
   <strong>Phone:</strong><br />
-  <strong>Jim:</strong> <a href="tel:17702860254">770-286-0254</a>
+  <strong>Jim:</strong> <a class="track-phone-jim" href="tel:17702860254">770-286-0254</a>
 </p>
       
 
