--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link rel="preload" as="image" href="images/icons/sbir.svg" />
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
+<link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
   <link rel="stylesheet" href="style.css?v=20260116b" />
   <link rel="manifest" href="manifest.json" />
 
