--- a/ai.html
+++ b/ai.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI for Small Businesses & Law Firms | Marietta Research Solutions</title>
-
+  
+  <link rel="canonical" href="https://www.mariettaresearchsolutions.com/ai.html" />
   <link rel="stylesheet" href="style.css?v20260116" />
-<link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
