--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact / Consult | Marietta Research Solutions</title>
 
+  <link rel="canonical" href="https://www.mariettaresearchsolutions.com/contact.html" />
   <link rel="preconnect" href="https://formspree.io">
   <link rel="stylesheet" href="style.css?v=20260116" />
   <link rel="manifest" href="manifest.json" />
