--- a/engineering.html
+++ b/engineering.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Electrical Engineering Consulting | Marietta Research Solutions</title>
 
+  <link rel="canonical" href="https://www.mariettaresearchsolutions.com/engineering.html" />
   <link rel="stylesheet" href="style.css?v=20260116" />
-<link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
