--- a/notary.html
+++ b/notary.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Notary Public Services | Marietta Research Solutions</title>
 
+  <link rel="canonical" href="https://www.mariettaresearchsolutions.com/notary.html" />
   <link rel="stylesheet" href="style.css?v=20260116" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
