--- a/patents.html
+++ b/patents.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Patent Drafting Support | Marietta Research Solutions</title>
 
+  <link rel="canonical" href="https://www.mariettaresearchsolutions.com/patents.html" />
   <link rel="stylesheet" href="style.css?v=20260116" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
