--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
 
   <meta name="description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Marietta Research Solutions",
+  "url": "https://jmaloney1965.github.io/Marietta-site/",
+  "telephone": "+1-770-286-0254",
+  "email": "jim@mariettaresearchsolutions.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "1640 Powers Ferry Rd SE, Bldg 11, Suite 200",
+    "addressLocality": "Marietta",
+    "addressRegion": "GA",
+    "postalCode": "30067",
+    "addressCountry": "US"
+  }
+}
+</script>
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
