--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta name="robots" content="index,follow" />
   
   <script type="application/ld+json">
 {
