--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="About Marietta Research Solutions: personalized professional solutions for small businesses, law firms, inventors, and individuals." />
+  <meta name="robots" content="index,follow" />
   
 <script>
   window.dataLayer = window.dataLayer || [];
