--- a/ai.html
+++ b/ai.html
@@ -17,6 +17,7 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="AI workflow support for small businesses and law firms. Automations, templates, document workflows, and responsible AI use with practical implementation." />
+  <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
