--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Contact Marietta Research Solutions to request a consultation. We provide engineering, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta name="robots" content="index,follow" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
