--- a/engineering.html
+++ b/engineering.html
@@ -16,7 +16,8 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="Electrical engineering consulting services including antennas, RF systems, numerical modeling, technical writing, and engineering support for small businesses and inventors." />
-
+  <meta name="robots" content="index,follow" />
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Electrical Engineering Consulting | Marietta Research Solutions" />
