--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
+  <meta name="robots" content="index,follow" />
   
   <!-- Google tag (gtag.js) -->
 <script>
