--- a/notary.html
+++ b/notary.html
@@ -16,6 +16,7 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="Notary public services in Marietta, Georgia (Cobb County) by appointment. Bring valid ID and unsigned documents. We do not provide legal advice." />
+  <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
