--- a/paralegal.html
+++ b/paralegal.html
@@ -16,7 +16,8 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="Paralegal support and document preparation services for law firms and individuals. Non-legal administrative support including formatting, organization, proofreading, and filing assistance." />
-
+  <meta name="robots" content="index,follow" />
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Paralegal Support & Document Preparation | Marietta Research Solutions" />
