--- a/patents.html
+++ b/patents.html
@@ -16,7 +16,8 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="Patent drafting support for inventors, startups, and technical teams. Technical writing, invention disclosure organization, figures support, and documentation for attorney review." />
-
+  <meta name="robots" content="index,follow" />
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Patent Drafting Support | Marietta Research Solutions" />
