--- a/prison-consulting.html
+++ b/prison-consulting.html
@@ -16,7 +16,8 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="Prison consulting and reentry support including planning, paperwork organization, form preparation assistance, and practical readiness guidance. No legal advice." />
-
+  <meta name="robots" content="index,follow" />
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Prison Consulting & Reentry Support | Marietta Research Solutions" />
