--- a/privacy.html
+++ b/privacy.html
@@ -15,6 +15,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
+  <meta name="robots" content="index,follow" />
   
   <!-- Google tag (gtag.js) -->
 <script>
