--- a/sbir.html
+++ b/sbir.html
@@ -16,7 +16,8 @@
 
   <!-- Basic SEO -->
   <meta name="description" content="SBIR/STTR grant writing support for small businesses. Proposal structuring, technical narrative drafting, work plans, milestones, and review/editing support." />
-
+  <meta name="robots" content="index,follow" />
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="SBIR Grant Writing Support | Marietta Research Solutions" />
