--- a/services.html
+++ b/services.html
@@ -16,6 +16,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Explore services offered by Marietta Research Solutions including engineering consulting, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta name="robots" content="index,follow" />
   
   <!-- Google tag (gtag.js) -->
 <script>
