--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
   <meta name="description" content="Thank you for contacting Marietta Research Solutions." />
+  <meta name="robots" content="index,follow" />
   
   <!-- Google tag (gtag.js) -->
 <script>
