--- a/ai.html
+++ b/ai.html
@@ -18,16 +18,21 @@
   <!-- Basic SEO -->
   <meta name="description" content="AI workflow support for small businesses and law firms. Automations, templates, document workflows, and responsible AI use with practical implementation." />
   <meta name="robots" content="index,follow" />
-
+  
   <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
   <meta property="og:description" content="Responsible AI workflows, automation support, and practical systems for small teams." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/ai.html" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Responsible AI workflows, automation support, and practical systems for small teams"/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
   
   <!-- Google tag (gtag.js) -->
 <script>
