--- a/about.html
+++ b/about.html
@@ -18,6 +18,20 @@
   <meta name="description" content="About Marietta Research Solutions: personalized professional solutions for small businesses, law firms, inventors, and individuals." />
   <meta name="robots" content="index,follow" />
   
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="About | Marietta Research Solutions" />
+  <meta property="og:description" content="Company overview of Marietta Research Solutions" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/about.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="About | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Company overview of Marietta Research Solutions"/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
