--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,20 @@
   <meta name="description" content="Contact Marietta Research Solutions to request a consultation. We provide engineering, AI workflows, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta name="robots" content="index,follow" />
 
+<!-- Open Graph -->
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
+  <meta property="og:description" content="Responsible AI workflows, automation support, and practical systems for small teams." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Responsible AI workflows, automation support, and practical systems for small teams"/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
   <script>
