--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
   <meta name="robots" content="index,follow" />
 
 <!-- Open Graph -->
-  <meta property="og:site_name" content="Marietta Research Solutions" />
-  <meta property="og:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
-  <meta property="og:description" content="Responsible AI workflows, automation support, and practical systems for small teams." />
+  <meta property="og:site_name" content="Contact details for  Marietta Research Solutions" />
+  <meta property="og:title" content="Contact Form | Marietta Research Solutions" />
+  <meta property="og:description" content="Contact Marietta Research Solutiona to request a consultation.  We provide engineering, AI workflow, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
