--- a/ai.html
+++ b/ai.html
@@ -25,21 +25,20 @@
   <meta property="og:description" content="Responsible AI workflows, automation support, and practical systems for small teams." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="AI for Small Businesses & Law Firms | Marietta Research Solutions" />
   <meta name="twitter:description" content="Responsible AI workflows, automation support, and practical systems for small teams"/>
-  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions.com/og-image.png" />
 
-  
-  <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-TFKE4XNDT7');
 </script>
 </head>
