--- a/ai.html
+++ b/ai.html
@@ -6,7 +6,7 @@
   <title>AI for Small Businesses & Law Firms | Marietta Research Solutions</title>
   
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/ai.html" />
-  <link rel="stylesheet" href="style.css?v20260116" />
+  <link rel="stylesheet" href="style.css?v=20260116" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
