--- a/ai.html
+++ b/ai.html
@@ -174,6 +174,11 @@
   });
 </script>
 
+<script>
+  console.log("AI page loaded");
+  console.log("gtag type:", typeof gtag);
+</script>
+
 <script src="site.js"></script>
 </body>
 </html>
