--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/about.html" />
-  <link rel="stylesheet" href="style.css?v=20260116">
+  <link rel="stylesheet" href="style.css?v=20260117">
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -24,7 +24,7 @@
   <meta property="og:description" content="Company overview of Marietta Research Solutions" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mariettaresearchsolutions.com/about.html" />
-  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"/>
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
@@ -32,15 +32,16 @@
   <meta name="twitter:description" content="Company overview of Marietta Research Solutions"/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-TFKE4XNDT7');
 </script>
 </head>
-
+  
 <body>
 
 <header class="site-header">
@@ -226,6 +227,6 @@
 </script>
 
 
-<script src="site.js"></script>
+<script src="site.js?v=202601017"></script>
 </body>
 </html>
