Update stylesheet and script version in contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/contact.html" />
   <link rel="preconnect" href="https://formspree.io">
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -249,7 +249,7 @@
   })();
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 
 </body>
 </html>
