--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
   <title>FAQ | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/faq.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -17,12 +17,12 @@
   <meta name="description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
   <meta name="robots" content="index,follow" />
   
-  <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-TFKE4XNDT7');
 </script>
 
@@ -155,6 +155,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
