Enhance SEO with Open Graph and Twitter meta tags
Added Open Graph and Twitter Card meta tags for improved social media sharing.

--- a/faq.html
+++ b/faq.html
@@ -16,6 +16,21 @@
 
   <meta name="description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
   <meta name="robots" content="index,follow" />
+
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Frequently asked questions for Marietta Research Solutions" />
+  <meta property="og:title" content="FAQ | Marietta Research Solutions" />
+  <meta property="og:description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/faq.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="FAQ | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
   
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TFKE4XNDT7"></script>
