Update Open Graph URL in contact.html

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="Contact Form | Marietta Research Solutions" />
   <meta property="og:description" content="Contact Marietta Research Solutiona to request a consultation.  We provide engineering, AI workflow, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/ai.html" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/contacts.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
