Update meta tags and versioning in index.html
Updated stylesheet and script versioning, added Open Graph and Twitter Card meta tags for improved SEO.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="preload" as="image" href="images/icons/notary.svg" />
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/" />
-  <link rel="stylesheet" href="style.css?v=20260116b" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
@@ -26,6 +26,20 @@
 
   <meta name="description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
   <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="Overview of Marietta Research Solutions" />
+  <meta property="og:title" content="Main Page | Marietta Research Solutions" />
+  <meta property="og:description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mariettaresearchsolutions.com/index.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Main Page | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Marietta Research Solutions provides personalized professional solutions including engineering consulting, AI workflow support, paralegal support, patent drafting support, SBIR support, prison consulting, and notary services."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
   
   <script type="application/ld+json">
 {
@@ -199,6 +213,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
