--- a/notary.html
+++ b/notary.html
@@ -29,6 +29,7 @@
   <meta name="twitter:card" content="summary" />
   
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
