Update stylesheet and meta tags in notary.html

--- a/notary.html
+++ b/notary.html
@@ -6,7 +6,7 @@
   <title>Notary Public Services | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/notary.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -24,9 +24,14 @@
   <meta property="og:description" content="By-appointment notary services in Marietta, GA. Bring valid ID and unsigned documents." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/notary.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Notary Public Servies | Marietta Research Solutions" />
+  <meta name="twitter:description" content="By-appointment notary services in Marietta, GA. Bring valid ID and unsigned documents."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+  
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -158,6 +163,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
