--- a/patents.html
+++ b/patents.html
@@ -6,7 +6,7 @@
   <title>Patent Drafting Support | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/patents.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -24,11 +24,17 @@
   <meta property="og:description" content="Technical documentation and patent drafting support to organize inventions for attorney review." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/patents.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Patent Drafting Support | Marietta Research Solutions" />
+  <meta name="twitter:description" content=""Technical documentation and patent drafting support to organize inventions for attorney review."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+  
   
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -164,6 +170,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
