Fix formatting of twitter:description meta tag

--- a/patents.html
+++ b/patents.html
@@ -29,7 +29,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Patent Drafting Support | Marietta Research Solutions" />
-  <meta name="twitter:description" content=""Technical documentation and patent drafting support to organize inventions for attorney review."/>
+  <meta name="twitter:description" content="Technical documentation and patent drafting support to organize inventions for attorney review."/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
   
   
