--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,17 @@
   <meta name="description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
   <meta name="robots" content="index,follow" />
   
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Prison Consulting & Reentry Support | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Practical planning and administrative support for reentry, paperwork organization, and non-legal advocacy assistance."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+  
+  
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
