Update privacy.html with new meta tags and resources
Updated stylesheet and script versions, added Open Graph and Twitter Card meta tags for improved social sharing.

--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/privacy.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -16,13 +16,19 @@
 
   <meta name="description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
   <meta name="robots" content="index,follow" />
-  
+
+    <!-- Open Graph -->
+  <meta property="og:site_name" content="Marietta Research Solutions" />
+  <meta property="og:title" content="Privacy Policy | Marietta Research Solutions" />
+  <meta property="og:description" content=""Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/privacy.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Prison Consulting & Reentry Support | Marietta Research Solutions" />
-  <meta name="twitter:description" content="Practical planning and administrative support for reentry, paperwork organization, and non-legal advocacy assistance."/>
+  <meta name="twitter:title" content=Privacy Policy | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information."/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
   
   
@@ -190,6 +196,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
