--- a/sbir.html
+++ b/sbir.html
@@ -6,7 +6,7 @@
   <title>SBIR Grant Writing Support | Marietta Research Solutions</title>
 
   <link rel="canonical" href="https://www.mariettaresearchsolutions.com/sbir.html" />
-  <link rel="stylesheet" href="style.css?v=20260116" />
+  <link rel="stylesheet" href="style.css?v=20260117" />
   <link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
@@ -24,11 +24,16 @@
   <meta property="og:description" content="Proposal drafting, editing, work plans, milestones, and technical narrative support for SBIR/STTR submissions." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/sbir.html" />
+  <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  
+  <meta name="twitter:title" content="SBIR Grant Writing Support | Marietta Research Solutions" />
+  <meta name="twitter:description" content="Proposal drafting, editing, work plans, milestones, and technical narrative support for SBIR/STTR submissions."/>
+  <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
+
   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -161,6 +166,6 @@
   });
 </script>
 
-<script src="site.js"></script>
+<script src="site.js?v=20260117"></script>
 </body>
 </html>
