Fix Open Graph and Twitter Card meta tags

--- a/privacy.html
+++ b/privacy.html
@@ -20,14 +20,14 @@
     <!-- Open Graph -->
   <meta property="og:site_name" content="Marietta Research Solutions" />
   <meta property="og:title" content="Privacy Policy | Marietta Research Solutions" />
-  <meta property="og:description" content=""Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
+  <meta property="og:description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://jmaloney1965.github.io/Marietta-site/privacy.html" />
   <meta property="og:image" content="https://www.mariettaresearchsolutions.com/og-image.png"
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content=Privacy Policy | Marietta Research Solutions" />
+  <meta name="twitter:title" content="Privacy Policy | Marietta Research Solutions" />
   <meta name="twitter:description" content="Privacy policy for Marietta Research Solutions. Learn how we handle contact form submissions and personal information."/>
   <meta name="twitter:image" content="https://www.mariettaresearchsolutions/og-image.png" />
   
